	prevent some exceptions in neko.net.ProxyDetect
	fixed ByteArray serialization
	added neko.Int32
	added -x for fast neko scripting
	prevent locals from breaking class access (works with imports)
	fix in function overriding subtyping
	added haxe.remoting.FlashJsConnection
	fixed tar support in neko.zip.File
	ide completion support using --display
	give access to neko.net.Host ip (as Int32)

2007-01-28: 1.11
	changed StringBuf.add implementation
	added haxe.Firebug
	allowed variable return type for overriden/implemented methods
	display error position in front of each error line
	improved error messages when optional arguments not matched
	added neko.io.Path
	added neko.net.ProxyDetect
	bugfix in unify : prevent recursive anonymous objects
	haxe.Http call "prepare" only if size is known
	added multiple expressions in "case"
	serialization : deprecated old string format, use urlEncode/Decode
	added flash9 bytearray serialization (to binary string, for neko com)
	fixed Type.typeof on some flash9 instances
	no more dontUseCache (haxe.Serializer.USE_CACHE, default to false)
	small genxml/haxedoc improvements
	added Type.enumEq
	local function parameters are now inferred in several cases
	optional RTTI for Spod Object
	bugfix related to callback in neko code generator
	more type error stack (now includes type parameters)
	type system fixes in anonymous subtyping
	added Iterable<T>, changed Lambda
	added TAR and GZIP support to neko.io.Zip
	compute minimal array content type
	fixes in enum switchs

2007-01-01: 1.10
	fix in haxe.remoting.SocketConnection.readAnswer
	fix in postfix incr/decr and getter/setter
	added haxe.Http.fileTransfert for Neko
	fixed haxelib to 1.02 (use multipart file transfert)
	fixed Array.reverse
	added flash.Lib.getURL and fscommand for Flash9
	fixed some ignored parse errors
	fixed minor syntax : immediate object access
	allow extend/implements a typedef
	fixed Flash9 AMF remoting
	fixed Flash9 bugs in Date object
	fixed dynamic Array typing bug