@@ -11,6 +11,8 @@
 	fixed tar support in neko.zip.File
 	ide completion support using --display
 	give access to neko.net.Host ip (as Int32)
+	fixed bug when calling super.UpperCaseMethod()
+	hide additional flash Array methods
 
 2007-01-28: 1.11
 	changed StringBuf.add implementation
